# setup

./: README.md  install.sh
config/: NVIM_TIPS.md  TIPS_NVIM.md  TIPS_TMUX.md
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/custom/plugins/: diffview.lua  gitsigns.lua  lsp.lua  yazi.lua
config/tmux/: .tmux.conf
uvtools/hey/: pyproject.toml
uvtools/hey/src/hey/: __init__.py  __main__.py
uvtools/mtai/: pyproject.toml
uvtools/mtai/src/mtai/: __main__.py
uvtools/tree-content/: README.md  pyproject.toml
uvtools/tree-content/src/tree_content/: __init__.py  __main__.py
